--- a/lmsm.css
+++ b/lmsm.css
@@ -1,10 +1,10 @@
 input.memory_slot {
-  font-size: small;
+  font-size: x-small;
   background-color: whitesmoke;
 }
 
 .box {
-  font-size: small;
+  font-size: smaller;
 }
 
 .pane {
@@ -41,6 +41,14 @@ td.memorySlot {
 }
 
 #outputPane {
-  height: 40em;
+  height: 50em;
   overflow-y: scroll;
+}
+
+#statusBox {
+  height: 6em;
+}
+
+#currentInstructionBox {
+  height: 10em;
 }
